# simple-shmem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: destroy_shmem.c  main.c  readshmem.c  shared_memory.c  shared_memory.h  writeshmem.c
tools/: pyshmem.py
